fix MainWindow geometry restoration when maximized (issue #170)

Workaround for https://bugreports.qt.io/browse/QTBUG-16252